--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
             android:layout_height="170dp"
             android:src="@drawable/ui_title"/>
         <ImageView
-            android:id="@+id/selected_image"
+            android:id="@+id/thumnail"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_gravity="center"
@@ -40,6 +40,7 @@
             android:scaleType="fitCenter"
             android:padding="15dp"
             android:src="@drawable/ui_request_equipment"
+            android:onClick="infoPopup"
             tools:ignore="MissingConstraints"/>
         <TextView
             android:id="@+id/selected_name"
