--- a/app/src/main/res/layout/popup_equipment.xml
+++ b/app/src/main/res/layout/popup_equipment.xml
@@ -7,6 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:gravity="center"
         android:orientation="vertical">
         <TextView
             android:id="@+id/star"
@@ -121,9 +122,22 @@
             android:lineSpacingExtra="5dp"
             android:textSize="18sp"
             android:textColor="#555555"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_margin="10dp"
+            android:background="#cccc"/>
+        <Button
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/ui_button_basic"
+            android:fontFamily="@font/nexon_low"
+            android:onClick="usedPopup"
+            android:text="영수증"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="3dp"/>
     </LinearLayout>
 </ScrollView>
