--- a/app/src/main/res/layout/activity_starforce.xml
+++ b/app/src/main/res/layout/activity_starforce.xml
@@ -100,6 +100,7 @@
                 android:layout_margin="10dp"
                 android:columnCount="2">
                 <TextView
+                    android:id="@+id/eventText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
